# api/urls.py
@@ -1,6 +1,11 @@
 from django.urls import path
-from .views import HelloView
+
+from .views import HelloView, LoginView, ProfileView, RegisterView
+
 
 urlpatterns = [
     path("hello/", HelloView.as_view(), name="hello"),
+    path("register/", RegisterView.as_view(), name="register"),
+    path("login/", LoginView.as_view(), name="login"),
+    path("profile/", ProfileView.as_view(), name="profile"),
 ]
